// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanDb 1`] = `86400000`;

exports[`cleanDb 2`] = `30000`;

exports[`launchEvent  1`] = `
Array [
  Array [
    "npm run tool event=event  gcp force &> tool.event.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchEvent  2`] = `
Object {
  "event": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "event",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchEvent azure 1`] = `
Array [
  Array [
    "npm run tool event=event live  azure &> tool.event.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchEvent azure 2`] = `Array []`;

exports[`launchEvent azure 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchEvent azure 4`] = `
Object {
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "event",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchEvent azure 5`] = `
Array [
  Array [
    "tool",
    "event",
    Object {
      "azure": true,
      "debug": false,
      "event": "event",
      "forceREST": false,
      "live": true,
    },
  ],
]
`;

exports[`launchEvent with existingInstance, no windows 1`] = `
Array [
  Array [
    "Others",
    [Function],
  ],
]
`;

exports[`launchEvent with existingInstance, no windows 2`] = `
Array [
  Array [
    "tool",
    "Others",
    Object {
      "aws": true,
      "debug": false,
      "event": "Others",
      "forceREST": false,
      "live": true,
      "server": true,
    },
  ],
]
`;

exports[`launchEvent with existingInstance, no windows 3`] = `
Object {
  "Others": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "processName": "Others",
  },
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "event",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchPriceFixService  1`] = `
Array [
  Array [
    "npm run tool pair=pair live  gcp &> tool.pair.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchPriceFixService  2`] = `
Object {
  "Others": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "processName": "Others",
  },
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "event",
  },
  "pair": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "pair",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchPriceFixService azure 1`] = `
Array [
  Array [
    "npm run tool pair=pair live  azure &> tool.pair.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchPriceFixService azure 2`] = `Array []`;

exports[`launchPriceFixService azure 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchPriceFixService azure 4`] = `
Object {
  "Others": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "processName": "Others",
  },
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "event",
  },
  "pair": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "pair",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchPriceFixService azure 5`] = `
Array [
  Array [
    "tool",
    "pair",
    Object {
      "azure": true,
      "debug": false,
      "live": true,
      "pair": "pair",
    },
  ],
]
`;

exports[`launchPriceFixService with existingInstance, no windows 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`launchPriceFixService with existingInstance, no windows 2`] = `
Array [
  Array [
    "tool",
    "pair",
    Object {
      "aws": true,
      "debug": false,
      "live": false,
      "pair": "pair",
      "server": true,
    },
  ],
]
`;

exports[`launchPriceFixService with existingInstance, no windows 3`] = `
Object {
  "Others": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "processName": "Others",
  },
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "event",
  },
  "pair": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "processName": "pair",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource debug not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource debug not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource debug windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource debug windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource fail not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource fail not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource fail not windows 3`] = `
Array [
  Array [
    "source",
    [Function],
  ],
]
`;

exports[`launchSource fail windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 dynamo azure >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource fail windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": false,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource fail windows 3`] = `
Array [
  Array [
    "source",
    [Function],
  ],
]
`;

exports[`launchSource fail windows 4`] = `
Array [
  Array [
    "tool",
    "source",
    Array [
      "asset1",
      "asset2",
      "asset3",
    ],
    Object {
      "azure": true,
      "debug": false,
      "dynamo": true,
      "forceREST": false,
      "live": false,
    },
  ],
]
`;

exports[`launchSource forceREST not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 rest&> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource forceREST not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource forceREST windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 gcp server rest>> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource forceREST windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource live not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 live &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource live not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource live windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 live >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource live windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource success not windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 &> tool.source.asset1.asset2.asset3.log",
    Object {
      "shell": "/bin/bash",
    },
  ],
]
`;

exports[`launchSource success not windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource success not windows 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchSource success windows 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 aws >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource success windows 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`launchSource success windows 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`launchSource success windows 4`] = `
Array [
  Array [
    "source",
    [Function],
  ],
]
`;

exports[`launchSource success windows 5`] = `
Array [
  Array [
    "tool",
    "source",
    Array [
      "asset1",
      "asset2",
      "asset3",
    ],
    Object {
      "aws": true,
      "debug": false,
      "forceREST": false,
      "live": false,
    },
  ],
]
`;

exports[`retry after long enought time 1`] = `
Object {
  "failCount": 1,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "processName": "source",
}
`;

exports[`retry after long enought time 2`] = `
Array [
  Array [
    [Function],
    5000,
  ],
]
`;

exports[`retry within short time 1`] = `
Object {
  "failCount": 3,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "processName": "source",
}
`;

exports[`startAggregate 1`] = `
Array [
  Array [
    Object {
      "period": Object {
        "N": "10",
      },
    },
  ],
  Array [
    Object {
      "period": Object {
        "N": "10",
      },
    },
  ],
]
`;

exports[`startAggregate 2`] = `
Array [
  Array [
    10,
  ],
  Array [
    10,
  ],
]
`;

exports[`startFetching no source 1`] = `
Array [
  Array [
    "tool",
    "gemini",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "bitstamp",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "gemini",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "bitstamp",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gemini",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "bitstamp",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
]
`;

exports[`startFetching source 1`] = `[Error: invalid source]`;

exports[`startFetching source 2`] = `
Array [
  Array [
    Array [
      "quote|base",
    ],
  ],
]
`;

exports[`startFetchingEvent no event 1`] = `
Array [
  Array [
    "tool",
    "event1",
    Object {
      "debug": false,
      "event": "event2",
      "events": Array [
        "event1",
        "event2",
      ],
    },
  ],
  Array [
    "tool",
    "event2",
    Object {
      "debug": false,
      "event": "event2",
      "events": Array [
        "event1",
        "event2",
      ],
    },
  ],
]
`;

exports[`startFetchingEvent no event 2`] = `
Object {
  "Others": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "processName": "Others",
  },
  "bitstamp": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "bitstamp",
  },
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "event",
  },
  "event1": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "event1",
  },
  "event2": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "event2",
  },
  "gdax": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "gdax",
  },
  "gemini": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "gemini",
  },
  "kraken": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "kraken",
  },
  "pair": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "processName": "pair",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`startFetchingEvent with event 1`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "event",
    },
  ],
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "StartReset",
    },
  ],
]
`;

exports[`startPriceFixService no pair 1`] = `
Array [
  Array [
    "tool",
    "pair1",
    Object {
      "debug": false,
      "pair": "pair2",
      "pairs": Array [
        "pair1",
        "pair2",
      ],
    },
  ],
  Array [
    "tool",
    "pair2",
    Object {
      "debug": false,
      "pair": "pair2",
      "pairs": Array [
        "pair1",
        "pair2",
      ],
    },
  ],
]
`;

exports[`startPriceFixService no pair 2`] = `
Object {
  "Others": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "processName": "Others",
  },
  "bitstamp": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "bitstamp",
  },
  "event": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "processName": "event",
  },
  "event1": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "event1",
  },
  "event2": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "event2",
  },
  "gdax": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "gdax",
  },
  "gemini": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "gemini",
  },
  "kraken": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "kraken",
  },
  "pair": Object {
    "failCount": 0,
    "instance": null,
    "lastFailTimestamp": 1234567890,
    "processName": "pair",
  },
  "pair1": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "pair1",
  },
  "pair2": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 0,
    "processName": "pair2",
  },
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "processName": "source",
  },
}
`;

exports[`startPriceFixService, commit, with pair 1`] = `Array []`;

exports[`startPriceFixService, commit, with pair 2`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "event",
    },
  ],
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "StartReset",
    },
  ],
  Array [
    "commit",
    Object {
      "debug": false,
      "pair": "pair",
      "pairs": Array [],
    },
  ],
]
`;

exports[`startPriceFixService, fetchPrice, with pair 1`] = `Array []`;

exports[`startPriceFixService, fetchPrice, with pair 2`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "event",
    },
  ],
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "StartReset",
    },
  ],
  Array [
    "commit",
    Object {
      "debug": false,
      "pair": "pair",
      "pairs": Array [],
    },
  ],
  Array [
    "fetchPrice",
    Object {
      "debug": false,
      "pair": "pair",
      "pairs": Array [],
    },
  ],
]
`;

exports[`startPriceFixService, invalid tool, with pair 1`] = `Array []`;

exports[`startPriceFixService, invalid tool, with pair 2`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "event",
    },
  ],
  Array [
    "tool",
    Object {
      "debug": false,
      "event": "StartReset",
    },
  ],
  Array [
    "commit",
    Object {
      "debug": false,
      "pair": "pair",
      "pairs": Array [],
    },
  ],
  Array [
    "fetchPrice",
    Object {
      "debug": false,
      "pair": "pair",
      "pairs": Array [],
    },
  ],
  Array [
    "tool",
    Object {
      "debug": false,
      "pair": "pair",
      "pairs": Array [],
    },
  ],
]
`;
